crates/tests/libs/bindgen/data/error/interface_lifetime_generic/input.rdl

#[winrt]
mod Test {
    interface IFoo<'a> {}
}
        